# cpp-basic-implementation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
problem-set/1001_Print_Output_01/: main.cpp
problem-set/1002_Print_Output_02/: main.cpp
problem-set/1003_Print_Output_03/: main.cpp
problem-set/1004_Print_Output_04/: main.cpp
problem-set/1005_Print_Output_05/: main.cpp
problem-set/1006_Print_Output_06/: main.cpp
problem-set/1007_Print_Output_07/: main.cpp
problem-set/1008_Print_Output_08/: main.cpp
problem-set/1010_Integer_Output/: main.cpp
problem-set/1011_Char_Output/: main.cpp
problem-set/1012_Float_Output/: main.cpp
problem-set/1013_Two_Integers_Output/: main.cpp
problem-set/1014_Two_Chars_Swapped/: main.cpp
problem-set/1015_Float_Two_Decimal/: main.cpp
problem-set/1017_Integer_Three_Times/: main.cpp
problem-set/1018_Print_Time/: main.cpp
problem-set/1019_Date_Output/: main.cpp
problem-set/1020_ID_Output_Modified/: main.cpp
problem-set/1021_Word_Output/: main.cpp
problem-set/1022_Sentence_Output/: main.cpp
problem-set/1023_Float_Parts/: README.md  main.cpp
problem-set/1024_Word_Split/: main.cpp
problem-set/1025_Integer_Split/: main.cpp
problem-set/1026_Minutes_Output/: main.cpp
problem-set/1027_Date_Format/: main.cpp
problem-set/1028_Integer_Output_2/: main.cpp
problem-set/1029_Float_Output_2/: main.cpp
problem-set/1030_Integer_Output_3/: main.cpp
problem-set/1031_Decimal_to_Octal/: main.cpp
problem-set/1032_Decimal_to_Hex_1/: main.cpp
problem-set/1033_Decimal_to_Hex_2/: main.cpp
(+67 files in other folders)
